--- a/app/global.css
+++ b/app/global.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
-@import 'fumadocs-ui/css/neutral.css';
-@import 'fumadocs-ui/css/preset.css';
+@import '@hanzo/docs/ui/css/neutral.css';
+@import '@hanzo/docs/ui/css/preset.css';
 @import '@zoo/brand/styles/docs.css';
 
 @theme inline {
